--- a/package.json
+++ b/package.json
@@ -28,5 +28,9 @@
     "prettier": "^1.19.1",
     "sass-loader": "^8.0.2",
     "vue-template-compiler": "^2.6.11"
-  }
+  },
+  "description": "## Project setup ``` npm install ```",
+  "main": "index.html",
+  "author": "",
+  "license": "ISC"
 }
